--- a/templates/page3.html
+++ b/templates/page3.html
@@ -11,13 +11,13 @@
 
 <div class="menu_p3">
     <a href="/page3" class="item">
-        <img src="/static/images/button_menu.png" width="100" alt="Image 1" class="image">
+        <img src="/static/images/button_menu.png" width="110" alt="Image 1" class="image">
     </a>
     <a href="/page6" class="item">
-        <img src="/static/images/button_menu_2.png" width="100" alt="Image 2" class="image">
+        <img src="/static/images/button_menu_2.png" width="110" alt="Image 2" class="image">
     </a>
     <a href="/page7" class="item">
-        <img src="/static/images/button_menu_3.png" width="100" alt="Image 3" class="image">
+        <img src="/static/images/button_menu_3.png" width="110" alt="Image 3" class="image">
     </a>
 </div>
 
@@ -27,7 +27,9 @@
     <span class="text_box1">Мегаящик</span>
     <br> <!-- Перенос строки для разделения основного и дополнительного текста -->
      <span class="text_box11">здесь вы можете выбить нового персонажа</span>
+
 </div>
+
 
 
 <div class="box_2">
@@ -51,6 +53,8 @@
      <span class="text_box44">здесь вы можете выбить нового персонажа</span>
 </div>
 
+
+<video> src='/static/videos/megabox.mp4/'</video>
 
 <script src="{{ url_for('static', filename='script.js') }}"></script>
   <script src="{{ url_for('static', filename='script_theme.js') }}"></script>
