--- a/templates/page4.html
+++ b/templates/page4.html
@@ -11,22 +11,79 @@
     <div class="quests_text">
         <h1>Игровые задачи</h1>
     </div>
-    <div class="image-container">
-        <img src="/static/images/brawl_stars_lobby.png" alt="Brawl Stars Lobby">
-        <div class="overlay-text">Выиграй Босса<br> Второе задание </div>
-        <!-- Текст поверх изображения -->
-    </div>
-
 <div class="content-container_2">
-    <div class="quests_text_2">
+    <div class="quests_text">
         <h1>Общие задачи</h1>
     </div>
-    <div class="image-container_2">
-        <img src="/static/images/brawl_stars_lobby.png" alt="Brawl Stars Lobby_2">
-        <div class="overlay-text_2">Подпишись на наш телеграмм<br> Подпишись на наш ютуб </div>
-        <!-- Текст поверх изображения -->
+<div class="content-container_3">
+    <div class="quests_text">
+        <h1>Дополнительные задачи</h1>
+    </div>
+<div class="content-container_4">
+    <div class="quests_text">
+        <h1>Бонус задачи</h1>
     </div>
 
+
+<div class="card">
+    <img src="/static/images/shelly_av.png" alt="TON Logo" class="card-logo">
+    <div class="card-content">
+        <div class="card-title">Победи Босса</div>
+        <div class="card-amount">
+            <img src="/static/images/coin.png" alt="Coin Icon" class="coin-icon">
+            3 200 000
+        </div>
+    </div>
+    <div class="card-arrow">&gt;</div>
+</div>
+
+<div class="card_2">
+    <img src="/static/images/shelly_av.png" alt="TON Logo" class="card-logo">
+    <div class="card-content">
+        <div class="card-title">Пригласи 5 друзей</div>
+        <div class="card-amount">
+            <img src="/static/images/coin.png" alt="Coin Icon" class="coin-icon">
+            1 500 000
+        </div>
+    </div>
+    <div class="card-arrow">&gt;</div>
+</div>
+
+<div class="card_3">
+    <img src="/static/images/shelly_av.png" alt="TON Logo" class="card-logo">
+    <div class="card-content">
+        <div class="card-title">Подпишись на наш телеграмм</div>
+        <div class="card-amount">
+            <img src="/static/images/coin.png" alt="Coin Icon" class="coin-icon">
+            4 800 000
+        </div>
+    </div>
+    <div class="card-arrow">&gt;</div>
+</div>
+
+<div class="card_4">
+    <img src="/static/images/shelly_av.png" alt="TON Logo" class="card-logo">
+    <div class="card-content">
+        <div class="card-title">Открой 5 ящиков</div>
+        <div class="card-amount">
+            <img src="/static/images/coin.png" alt="Coin Icon" class="coin-icon">
+            2 200 000
+        </div>
+    </div>
+    <div class="card-arrow">&gt;</div>
+</div>
+
+<div class="card_5">
+<img src="/static/images/shelly_av.png" alt="TON Logo" class="card-logo">
+<div class="card-content">
+    <div class="card-title">Набери 100 очков в игре</div>
+    <div class="card-amount">
+        <img src="/static/images/coin.png" alt="Coin Icon" class="coin-icon">
+        3 200 000
+    </div>
+</div>
+<div class="card-arrow">&gt;</div>
+</div>
 <!--<div class="container_p4">-->
 <!--    <a href="/boss1" class="item">-->
 <!--        <img src="/static/images/button_menu.png" alt="Image 1" width="100" class="image">-->
