--- a/templates/page9.html
+++ b/templates/page9.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Скины</title>
+    <title>Скины_2</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
@@ -24,7 +24,6 @@
         <button class="menu_2-item" id="rare-button">Редкие</button>
         <button class="menu_2-item" id="premium-button">Премиум</button>
     </div>
-
 <div class="shelly_p3">
 <img id="mainImage" src="/static/images/shelly_3.png" alt="Main Image">
 </div>
