--- a/templates/page5.html
+++ b/templates/page5.html
@@ -6,15 +6,15 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-    <h1>Кликер Бравл Старс</h1>
-<button onclick="window.location.href='/page5'">топ игроков по монетам</button>
-<button onclick="window.location.href='/page8'">топ клубов</button>
 
-<div class="rectangle"></div>
-<div class="rectangle"></div>
-<div class="rectangle"></div>
-<div class="rectangle"></div>
 
+<div class="leaderboard-container">
+    <h1 class="leaderboard-title">Топ Игроков</h1>
+
+    <div class="tabs">
+        <button class="tab-button active" id="coins-tab">По Монетам</button>
+        <button class="tab-button" id="club-tab">По Клубам</button>
+    </div>
 
 
     <script src="{{ url_for('static', filename='script.js') }}"></script>
