--- a/templates/page7.html
+++ b/templates/page7.html
@@ -3,22 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page 7</title>
+    <title>Фоны</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
+
+
+
 <div class="menu_p3">
     <a href="/page3" class="item">
-        <img src="/static/images/button_menu.png" width="200" alt="Image 1" class="image">
+        <img src="/static/images/button_menu.png" width="110" alt="Image 1" class="image">
     </a>
     <a href="/page6" class="item">
-        <img src="/static/images/button_menu_2.png" width="200" alt="Image 2" class="image">
+        <img src="/static/images/button_menu_2.png" width="110" alt="Image 2" class="image">
     </a>
     <a href="/page7" class="item">
-        <img src="/static/images/button_menu_3.png" width="200" alt="Image 3" class="image">
+        <img src="/static/images/button_menu_3.png" width="110" alt="Image 3" class="image">
     </a>
 </div>
-
 
 <!--<button onclick="changeBackgroundImage('theme_2.png')">Сменить фон на theme_2.png</button>-->
 <!--<button onclick="changeBackgroundImage('theme_3.png')">Сменить фон на theme_3.png</button>-->
