--- a/templates/_nav.html
+++ b/templates/_nav.html
@@ -1,33 +1,32 @@
-<!-- _nav.html -->
-<div class="navigation" id="menu">
-    <a href="/" class="nav-button {% if active_page == 'page1' %}active{% endif %}">
-        <figure>
-            <img src="static/images/play.png" alt="Играть" width="15" height="15">
-            <figcaption>Играть</figcaption>
-        </figure>
+ <div class="navigation" id="menu">
+    <a href="/" class="nav-button">
+      <figure>
+        <img src="static/images/play.png" alt="Играть" width="15" height="15">
+        <figcaption>Играть</figcaption>
+      </figure>
     </a>
-    <a href="/page2" class="nav-button {% if active_page == 'page2' %}active{% endif %}">
-        <figure>
-            <img src="/static/images/friends_7.png" alt="Друзья" width="15" height="15">
-            <figcaption>Друзья</figcaption>
-        </figure>
+    <a href="/page2" class="nav-button">
+      <figure>
+        <img src="static/images/friends_7.png" alt="Друзья" width="15" height="15">
+        <figcaption>Друзья</figcaption>
+      </figure>
     </a>
-    <a href="/page3" class="nav-button {% if active_page == 'page3' %}active{% endif %}">
-        <figure>
-            <img src="static/images/shop.png" alt="Магазин" width="15" height="15">
-            <figcaption>Магазин</figcaption>
-        </figure>
+    <a href="/page3" class="nav-button">
+      <figure>
+        <img src="static/images/shop.png" alt="Магазин" width="15" height="15">
+        <figcaption>Магазин</figcaption>
+      </figure>
     </a>
-    <a href="/page4" class="nav-button {% if active_page == 'page4' %}active{% endif %}">
-        <figure>
-            <img src="static/images/quests.png" alt="квесты" width="15" height="15">
-            <figcaption>Квесты</figcaption>
-        </figure>
+    <a href="/page4" class="nav-button">
+      <figure>
+        <img src="static/images/quests.png" alt="Квесты" width="15" height="15">
+        <figcaption>Квесты</figcaption>
+      </figure>
     </a>
-    <a href="/page5" class="nav-button {% if active_page == 'page5' %}active{% endif %}">
-        <figure>
-            <img src="static/images/top.png" alt=рюкзак" width="15" height="15">
-            <figcaption>Топ</figcaption>
-        </figure>
+    <a href="/page5" class="nav-button">
+      <figure>
+        <img src="static/images/top.png" alt="Топ" width="15" height="15">
+        <figcaption>Топ</figcaption>
+      </figure>
     </a>
-</div>
+  </div>
