--- a/templates/page1.html
+++ b/templates/page1.html
@@ -24,18 +24,17 @@
 <p id="score"><span id="currentScore">0</span></p>
 <p id="nick">Максим</p>
 
-<div class="center-container">
-        <img id="gift" src="/static/images/gift.png" onclick="showAutoClickerButton();">
-        <img id="clickButton" src="/static/images/shelly_3.png" style="width: 330px;" onclick="alert('Кнопка нажата!');">
-        <br>
-        <button id="autoClickerButton">Автокликер</button>
-    </div>
+<img id="clickButton" src="/static/images/shelly_3.png" style="width: 330px;" onclick="alert('Кнопка нажата!');">
+<br>
+<button id="autoClickerButton">Автокликер</button>
 
+
+<img id="gift" src="/static/images/gift.png" onclick="showAutoClickerButton();">
 
 <progress id="progressBar" value="1000" max="1000"></progress>
 
 <div class="icon-container">
-    <img src="/static/images/icon.png" alt="Иконка" width="400">
+    <img src="/static/images/icon.png" alt="Иконка" width="75">
 </div>
 
 <div class="coin">
@@ -44,9 +43,17 @@
 
 
 
-<div class="figure">
-    <img src="/static/images/money.png" alt="овал" width="340">
+<div class="image-container">
+    <div class="image-item">
+        <span class="image-text">10000</span>
+        <img src="/static/images/coin.png" alt="Картинка 1">
+    </div>
+    <div class="image-item">
+        <span class="image-text">3000</span>
+        <img src="/static/images/bling.png" alt="Картинка 2">
+    </div>
 </div>
+
 
 
 <div class="dropdown">
