--- a/templates/page2.html
+++ b/templates/page2.html
@@ -8,18 +8,36 @@
 <body>
 
 <div class="friends_6">
-    <img src="/static/images/friends_6.png" width="320">
+    <h1>Пригласите друзей</h1>
+    <p>вы и ваш друг получите бонусы</p>
 </div>
+
 <div class="friends_3">
     <img src="/static/images/friends_3.png" width="320">
 </div>
 
-<div class="friends_4">
+<div class="friends_5">
     <img src="/static/images/friends_4.png" width="320">
 </div>
-<div class="friends_5">
-    <img src="/static/images/friends_5.png" width="320">
+
+<div class="friends_4">
+    <p>Список ваших друзей</p>
 </div>
+
+  <div class="friend-list">
+    <div class="friend-card">
+      <img src="/static/images/colt_av.png" alt="Avatar">
+      <div class="friend-info">Ник - уровень</div>
+    </div>
+    <div class="friend-card">
+      <img src="/static/images/colt_av.png" alt="Avatar">
+      <div class="friend-info">Ник - уровень</div>
+    </div>
+    <div class="friend-card">
+      <img src="/static/images/colt_av.png" alt="Avatar">
+      <div class="friend-info">Ник - уровень</div>
+    </div>
+  </div>
 
     <script src="{{ url_for('static', filename='script_theme.js') }}"></script>
 <script src="{{ url_for('static', filename='script.js') }}"></script>
