--- a/templates/page4.html
+++ b/templates/page4.html
@@ -7,22 +7,25 @@
 </head>
 <body>
 
-<div class="content-container">
-    <div class="quests_text">
-        <h1>Игровые задачи</h1>
-    </div>
-<div class="content-container_2">
-    <div class="quests_text">
-        <h1>Общие задачи</h1>
-    </div>
-<div class="content-container_3">
-    <div class="quests_text">
-        <h1>Дополнительные задачи</h1>
-    </div>
-<div class="content-container_4">
-    <div class="quests_text">
-        <h1>Бонус задачи</h1>
-    </div>
+<div class = 'quests_text'>
+<p>Игровые задачи</p>
+</div>
+
+
+<div class = 'quests_text_2'>
+<p>Основные задачи</p>
+</div>
+
+
+<div class = 'quests_text_3'>
+<p>Бонус задачи</p>
+</div>
+
+
+<div class = 'quests_text_4'>
+<p>Доп задачи</p>
+</div>
+
 
 
 <div class="card">
@@ -52,10 +55,10 @@
 <div class="card_3">
     <img src="/static/images/shelly_av.png" alt="TON Logo" class="card-logo">
     <div class="card-content">
-        <div class="card-title">Подпишись на наш телеграмм</div>
+        <div class="card-title">Пригласи 10 друзей</div>
         <div class="card-amount">
             <img src="/static/images/coin.png" alt="Coin Icon" class="coin-icon">
-            4 800 000
+            1 500 000
         </div>
     </div>
     <div class="card-arrow">&gt;</div>
@@ -64,30 +67,14 @@
 <div class="card_4">
     <img src="/static/images/shelly_av.png" alt="TON Logo" class="card-logo">
     <div class="card-content">
-        <div class="card-title">Открой 5 ящиков</div>
+        <div class="card-title">Пригласи 100 друзей</div>
         <div class="card-amount">
             <img src="/static/images/coin.png" alt="Coin Icon" class="coin-icon">
-            2 200 000
+            1 500 000
         </div>
     </div>
     <div class="card-arrow">&gt;</div>
 </div>
-
-<div class="card_5">
-<img src="/static/images/shelly_av.png" alt="TON Logo" class="card-logo">
-<div class="card-content">
-    <div class="card-title">Набери 100 очков в игре</div>
-    <div class="card-amount">
-        <img src="/static/images/coin.png" alt="Coin Icon" class="coin-icon">
-        3 200 000
-    </div>
-</div>
-<div class="card-arrow">&gt;</div>
-</div>
-<!--<div class="container_p4">-->
-<!--    <a href="/boss1" class="item">-->
-<!--        <img src="/static/images/button_menu.png" alt="Image 1" width="100" class="image">-->
-<!--    </a>-->
 
     <script src="{{ url_for('static', filename='script.js') }}"></script>
   <script src="{{ url_for('static', filename='script_theme.js') }}"></script>
